--- a/assets/scss/shared/_bootstrap.scss
+++ b/assets/scss/shared/_bootstrap.scss
@@ -12,7 +12,7 @@ $secondary: #27A3FF29;
 $danger: #FF87B0;
 $light: #FFFFFF;
 
-// scss-docs-start import-stack
+// scss-docs-start import-stack-[plbl b. . ......    
 // Configuration
 @import "../../bootstrap/scss/functions";
 @import "../../bootstrap/scss/variables";
