--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -1,6 +1,38 @@
-<section class="section testimonials py-5">
+<section class="section testimonials py-5" id="contact">
+
+  <div class="row pb-5">
+    <div class="col-12">
+      {{ with .content.title }}
+        <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
+      {{ end }}
+    </div>
+  </div>
+
   <div class="container">
-    <div class="row pb-5">
+    <div class="row justify-content-center text-center"> <!-- Center the content -->
+      <div class="col-6">
+        <form action="https://formspree.io/f/xpzgbjvq" method="POST">
+          <div class="form-group">
+            <label for="email" class="text-center text-black-61 text-xl-start pb-4 w-100">
+              Your email
+              <input type="email" name="email" class="form-control">
+            </label>
+          </div>
+          <label class="text-center text-black-61 text-xl-start pb-4 w-100">
+              Your message
+              <textarea rows="7" name="message" class="form-control"></textarea>
+          </label>
+          <div class="text-center">
+            <button type="submit" class="btn btn-outline-primary px-5">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+    <!-- <div class="row pb-5">
       <div class="col-12">
         {{ with .content.title }}
           <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
@@ -43,6 +75,5 @@
           </div>
         </div>
       {{ end }}
-    </div>
-  </div>
-</section>
+    </div> -->
+
