Fixed mobile screens

--- a/layouts/partials/sections/portfolio.html
+++ b/layouts/partials/sections/portfolio.html
@@ -1,5 +1,5 @@
-<section class="section portfolio" id="portfolio">
-  <div class="container">
+<section class="section portfolio text-center" id="portfolio">
+  <div class="container mx-auto max-w-sm">
     {{ range .content }}
     <div class="row portfolio-feature">
       <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
