Fixed contact form for mobile

--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <div class="row justify-content-center text-center"> <!-- Center the content -->
-      <div class="col-6">
+      <div class="col-lg-6 col-md-8 col-sm-10 col-12">
         <form action="https://formspree.io/f/xpzgbjvq" method="POST">
           <div class="form-group">
             <label for="email" class="text-center text-black-61 text-xl-start pb-4 w-100">
@@ -28,7 +28,6 @@
         </form>
       </div>
     </div>
-
   </div>
 
 </section>
