Added google analytics

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -18,8 +18,12 @@
 
   {{ partial "head/_buymeacoffee.html" . }}
 
+  {{ partial "head/_googleanalytics.html" . }}
+
   <!-- RSS -->
   {{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
+
+
 </head>
