--- a/assets/scss/shared/_utilities.scss
+++ b/assets/scss/shared/_utilities.scss
@@ -10,7 +10,8 @@
 .bg-purple { background-color: #ADA8D6; }
 
 .bg-blue-16 {
-  background-color: rgba(39, 163, 255, 0.16);
+  // background-color: rgba(39, 163, 255, 0.16);
+  background-color: rgba(157, 212, 255, 0.16);
 }
 
 .border-blue-16 {
