--- a/layouts/partials/sections/services.html
+++ b/layouts/partials/sections/services.html
@@ -5,7 +5,7 @@
         {{ with .content.title }}
           <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
         {{ end }}
-        {{ with .content.text }}
+        {{ with .content.text | markdownify }}
           <p class="text-black-61 text-center pb-3">{{ . }}</p>
         {{ end }}
       </div>
@@ -13,7 +13,7 @@
     <div class="row g-5">
       {{ range .content.cards }}
         <div class="col-12 col-xl-4">
-          <div class="card bg-blue-16 border-0 border-radius-34 p-4">
+          <div class="card bg-blue-16 border-1 border-radius-34 p-3">
             {{ with .image }}{{ partial "utilities/image-fluid.html" . }}{{ end }}
             <div class="card-body text-center">
               {{ with .title }}<h4 class="card-title text-center text-primary pb-4">{{ . }}</h4>{{ end }}
