--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -1,6 +1,6 @@
 <section class="section testimonials py-5" id="contact">
 
-  <div class="row pb-5">
+  <div class="row pb-2">
     <div class="col-12">
       {{ with .content.title }}
         <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
@@ -10,7 +10,7 @@
 
   <div class="container">
     <div class="row justify-content-center text-center"> <!-- Center the content -->
-      <div class="col-lg-6 col-md-8 col-sm-10 col-12">
+      <div class="col-lg-6 col-10">
         <form action="https://formspree.io/f/xpzgbjvq" method="POST">
           <div class="form-group">
             <label for="email" class="text-center text-black-61 text-xl-start pb-4 w-100">
