--- a/layouts/partials/shared/header.html
+++ b/layouts/partials/shared/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
       {{ partial "utilities/image.html" "images/logo.png" }}
-      <span class="fs-3 fw-lighter text-primary d-inline-block px-2">{{ .Site.Title }}</span>
+      <span class="fs-3 fw-light text-primary d-inline-block px-2">{{ .Site.Title }}</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
