--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -15,7 +15,7 @@
           <div class="form-group">
             <label for="email" class="text-center text-black-61 text-xl-start pb-4 w-100">
               Your email
-              <input type="email" name="email" class="form-control">
+              <input type="email" id="email" name="email" class="form-control">
             </label>
           </div>
           <label class="text-center text-black-61 text-xl-start pb-4 w-100">
