--- a/assets/scss/shared/_bootstrap.scss
+++ b/assets/scss/shared/_bootstrap.scss
@@ -7,9 +7,9 @@
 
 $font-family-base: "Inter", sans-serif;
 
-$primary: #7C76BB;
+$primary: #645db6;
 $secondary: #27A3FF29;
-$danger: #FF87B0;
+$danger: #fb709e;
 $light: #FFFFFF;
 
 // scss-docs-start import-stack-[plbl b. . ......    
