--- a/layouts/partials/sections/hero.html
+++ b/layouts/partials/sections/hero.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row flex-column flex-xl-row-reverse">
       <div class="col-12 col-xl-6 d-flex flex-column justify-content-center hero-image">
-        {{ partial "utilities/image-fluid-hidemobile" "images/hero-image.png" }}
+        {{ partial "utilities/image-fluid-hidemobile" "images/hero-image.webp" }}
       </div>
       <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
         {{ with .content.title }}
