Improved download buttons

--- a/layouts/partials/sections/cta.html
+++ b/layouts/partials/sections/cta.html
@@ -17,6 +17,9 @@
         {{ with .content.button }}
           <a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
         {{ end }}
+        {{ with .content.text }}
+          <p class="text-center text-black-61 pb-4 my-2">{{ . | markdownify }}</p>
+        {{ end }}
       </div>
     </div>
   </div>
