--- a/layouts/partials/shared/footer.html
+++ b/layouts/partials/shared/footer.html
@@ -35,7 +35,7 @@
         </ul> 
       </div>-->
       <div class="col-6 col-xl-4 text-center pb-4">
-        <h5 class="fs-6 fw-semibold text-primary">Contact us</h5>
+        <h5 class="fs-6 fw-semibold text-primary">Contact me</h5>
           <a class="small text-black-61 mb-1" href="mailto:hello@slideshower.com">hello@slideshower.com</a>
         <!-- {{ range .Site.Params.contact }}
           <p class="small text-black-61 mb-1">{{ . }}</p>
