--- a/layouts/partials/shared/footer.html
+++ b/layouts/partials/shared/footer.html
@@ -1,4 +1,4 @@
-<footer class="shared footer bg-blue-light py-5">
+<footer class="shared footer bg-blue-light pb-1 pt-5">
   <div class="container">
     <div class="row pb-5 justify-content-center">
       <div class="col-6 col-xl-4 text-center pb-4">
