--- a/layouts/partials/shared/footer.html
+++ b/layouts/partials/shared/footer.html
@@ -52,6 +52,10 @@
           <p class="small text-black-61 text-center">{{ . }}</p>
         {{ end }}
       </div>
+      <div class="col-8 text-center">
+        <a href="{{ "privacy-policy" | relURL }}">Privacy Policy</a>
+      </div>
+      
     </div>
   </div>
 </footer>
