--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,8 @@
-h4 {
+.mainHeaderPrivacyPolicy {
+    margin-top: 4rem;
+}
+
+.subHeaderPrivacyPolicy {
     margin-top: 1.5rem;
 }
 
-h3 {
-    margin-top: 4rem;
-}
