--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -13,16 +13,10 @@
       <div class="col-lg-6 col-10">
         <form action="https://formspree.io/f/xpzgbjvq" method="POST">
           <div class="form-group">
-            <label for="email" class="text-center text-black-61 text-xl-start pb-4 w-100">
-              Your email
-              <input type="email" id="email" name="email" class="form-control">
-            </label>
+              <input type="email" id="email" name="email" placeholder="Your email" class="form-control">
+              <textarea rows="7" name="message" placeholder="Your message" class="form-control mt-4"></textarea>
           </div>
-          <label class="text-center text-black-61 text-xl-start pb-4 w-100">
-              Your message
-              <textarea rows="7" name="message" class="form-control"></textarea>
-          </label>
-          <div class="text-center">
+          <div class="text-center mt-4">
             <button type="submit" class="btn btn-outline-primary px-5">Send</button>
           </div>
         </form>
