--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -22,15 +22,15 @@
           </div>
           <div class="faq-item">
             <dt class="faq-question">How do I download SlideShower?</dt>
-            <dd class="faq-answer">You can download SlideShower directly from our website. It's a lightweight app, only 2.2 MB in size.</dd>
+            <dd class="faq-answer">You can download SlideShower directly from this website. It's a lightweight app, ver 1.0 is only 2.2 MB in size.</dd>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">What makes SlideShower unique for macOS users?</dt>
-            <dd class="faq-answer">SlideShower is crafted specifically for macOS, offering a seamless and efficient photo slideshow experience unlike any other app.</dd>
+            <dt class="faq-question">How to install Slideshower?</dt>
+            <dd class="faq-answer">That's a bit tricky part. Download the file, open it once - accept the info window and then you need to open the .dmg file again. If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></dd>
           </div>
           <div class="faq-item">
             <dt class="faq-question">Can I request new features for SlideShower?</dt>
-            <dd class="faq-answer">Yes, we are open to suggestions. If you need more features, drop us a line, and we'll consider adding them.</dd>
+            <dd class="faq-answer">Yes! I am open to suggestions. If you need more features, <a href="#contact">reach out to me</a>, and I'll consider adding them.</dd>
           </div>
         </dl>
       </div>
