--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -14,7 +14,7 @@
         <form action="https://formspree.io/f/xpzgbjvq" method="POST">
           <div class="form-group">
               <input type="email" id="email" name="email" placeholder="Your email" class="form-control">
-              <textarea rows="7" name="message" placeholder="Your message" class="form-control mt-4"></textarea>
+              <textarea rows="7" name="message" placeholder="Something is not working? Feature is missing? Let me know." class="form-control mt-4"></textarea>
           </div>
           <div class="text-center mt-4">
             <button type="submit" class="btn btn-outline-primary px-5">Send</button>
