--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -18,7 +18,7 @@
           </div>
           <div class="faq-item">
             <dt class="faq-question">How much does SlideShower cost?</dt>
-            <dd class="faq-answer">SlideShower is free to use. You can support development by buying me a coffee.</dd>
+            <dd class="faq-answer">SlideShower is free to use. You can support development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</dd>
           </div>
           <div class="faq-item">
             <dt class="faq-question">How do I download SlideShower?</dt>
