Added 1.1 version of the app plus release history

--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -22,7 +22,7 @@
           </div>
           <div class="faq-item">
             <dt class="faq-question">How do I download SlideShower?</dt>
-            <dd class="faq-answer">You can download SlideShower directly from this website. It's a lightweight app, ver 1.0 is only 2.2 MB in size.</dd>
+            <dd class="faq-answer">You can download SlideShower directly from this website. It's a lightweight app (4.4MB) and simple to use.</dd>
           </div>
           <div class="faq-item">
             <dt class="faq-question">How to install Slideshower?</dt>
@@ -33,6 +33,28 @@
             <dd class="faq-answer">Yes! I am open to suggestions. If you need more features, <a href="#contact">reach out to me</a>, and I'll consider adding them.</dd>
           </div>
         </dl>
+      </div>
+    </div>
+    
+  </div>
+</section>
+
+
+<section class="section section-releasenotes py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-8">
+        <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes</h2>
+          <div class="release-note">
+            <span class="release-date">November 22, 2023</span>
+            <span class="release-version">v1.1</span>
+            <span class="release-description">Full-screen mode enabled. ESC button quits the slideshow. Support for selecting directories added.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">October 25, 2023</span>
+            <span class="release-version">v1.0</span>
+            <span class="release-description">Slideshower for macOS released to the public</span>
+          </div>
       </div>
     </div>
   </div>
