--- a/layouts/partials/sections/cta.html
+++ b/layouts/partials/sections/cta.html
@@ -15,7 +15,7 @@
     <div class="row justify-content-center">
       <div class="col-12 col-xl-6 text-center">
         {{ with .content.button }}
-          <a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
+          <a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}<span class="ms-2"></span></a>
         {{ end }}
         {{ with .content.text }}
           <p class="text-center text-black-61 pb-4 my-2">{{ . | markdownify }}</p>
