--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -46,6 +46,11 @@
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes</h2>
           <div class="release-note">
+            <span class="release-date">November 26, 2023</span>
+            <span class="release-version">v1.2</span>
+            <span class="release-description">Fade transition option added.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">November 22, 2023</span>
             <span class="release-version">v1.1</span>
             <span class="release-description">Full-screen mode bug fix. ESC button quits the slideshow. Support for selecting directories added.</span>
