--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -22,7 +22,7 @@
           </div>
           <div class="faq-item">
             <dt class="faq-question">How do I download Slideshower?</dt>
-            <dd class="faq-answer">You can download Slideshower directly from this website. It's a lightweight app (4.4MB) and simple to use.</dd>
+            <dd class="faq-answer">You can download Slideshower directly from this website. It's a lightweight app and simple to use.</dd>
           </div>
           <div class="faq-item">
             <dt class="faq-question">How to install Slideshower?</dt>
