--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{end}}" />
   <meta name="keywords" content="{{ if .Params.Keywords }}{{ delimit .Params.Keywords ", " }}{{ end }}">
-  <link rel="canonical" href="https://www.slideshower.com" />
+  <link rel="canonical" href="https://slideshower.com" />
 
   <meta property="og:title" content="SlideShower for macOS" />
   <meta property="og:description" content="The easiest way to run photo slideshows on macOS." />
-  <meta property="og:image" content="https://www.slideshower.com/images/slideshower_screenshot.webp" />
-  <meta property="og:url" content="https://www.slideshower.com" />
+  <meta property="og:image" content="https://slideshower.com/images/slideshower_screenshot.webp" />
+  <meta property="og:url" content="https://slideshower.com" />
   
   <!-- Favicons and Manifest -->
   {{ partial "head/_favicons.html" . }}
