Fixed FAQ and Release notes layout

--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -1,36 +1,36 @@
-<section class="section faq py-5">
+<section class="section faq py-5" id="faq">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8">
         <h1 class="fs-1 fw-bold text-center text-primary pb-3">FAQ - Slideshower for macOS</h1>
         <div class="faq-container">
           <div class="faq-item">
-            <dt class="faq-question">What is Slideshower?</dt>
-            <dd class="faq-answer">Slideshower is the simplest app to run photo slideshows on macOS. It's designed for ease of use and functionality.</dd>
+            <h4 class="faq-question">What is Slideshower?</h4>
+            <h5 class="faq-answer">Slideshower is the simplest app to run photo slideshows on macOS. It's designed for ease of use and functionality.</dd>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">Is Slideshower easy to use?</dt>
-            <dd class="faq-answer">Yes, Slideshower is user-friendly, allowing for simple, randomized, full-screen photo shows on macOS.</dd>
+            <h4 class="faq-question">Is Slideshower easy to use?</h4>
+            <h5 class="faq-answer">Yes, Slideshower is user-friendly, allowing for simple, randomized, full-screen photo shows on macOS.</h5>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">Can I shuffle photos in my slideshow?</dt>
-            <dd class="faq-answer">Absolutely, Slideshower includes a shuffle mode to mix up your slideshow order, a feature not available in the macOS Photos app.</dd>
+            <h4 class="faq-question">Can I shuffle photos in my slideshow?</h4>
+            <h5 class="faq-answer">Absolutely, Slideshower includes a shuffle mode to mix up your slideshow order, a feature not available in the macOS Photos app.</h5>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">How much does Slideshower cost?</dt>
-            <dd class="faq-answer">SlideShower is free to use. You can support development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</dd>
+            <h4 class="faq-question">How much does Slideshower cost?</h4>
+            <h5 class="faq-answer">SlideShower is free to use. You can support development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</h5>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">How do I download Slideshower?</dt>
-            <dd class="faq-answer">You can download Slideshower directly from this website. It's a lightweight app and simple to use.</dd>
+            <h4 class="faq-question">How do I download Slideshower?</h4>
+            <h5 class="faq-answer">You can download Slideshower directly from this website. It's a lightweight app and simple to use.</h5>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">How to install Slideshower?</dt>
-            <dd class="faq-answer">That's a bit tricky part. Download the file, open it once - accept the info window and then you need to open the .dmg file again. If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></dd>
+            <h4 class="faq-question">How to install Slideshower?</h4>
+            <h5 class="faq-answer">That's a bit tricky part. Download the file, open it once - accept the info window and then you need to open the .dmg file again. If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></h5>
           </div>
           <div class="faq-item">
-            <dt class="faq-question">Can I request new features for Slideshower?</dt>
-            <dd class="faq-answer">Yes! I am open to suggestions. If you need more features, <a href="#contact">reach out to me</a>, and I'll consider adding them.</dd>
+            <h4 class="faq-question">Can I request new features for Slideshower?</h4>
+            <h5 class="faq-answer">Yes! I am open to suggestions. If you need more features, <a href="#contact">reach out to me</a>, and I'll consider adding them.</h5>
           </div>
         </dl>
       </div>
@@ -44,21 +44,21 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8">
-        <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes</h2>
+        <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
           <div class="release-note">
-            <span class="release-date">November 26, 2023</span>
+            <span class="release-date">Nov 26, 2023</span>
             <span class="release-version">v1.2</span>
-            <span class="release-description">Fade transition option added.</span>
+            <span class="release-description">You can enable smooth fade transition.</span>
           </div>
           <div class="release-note">
-            <span class="release-date">November 22, 2023</span>
+            <span class="release-date">Nov 22, 2023</span>
             <span class="release-version">v1.1</span>
-            <span class="release-description">Full-screen mode bug fix. ESC button quits the slideshow. Support for selecting directories added.</span>
+            <span class="release-description">Full-screen mode bug fixed. ESC button quits the slideshow. You can select directories and all photos inside will be added.</span>
           </div>
           <div class="release-note">
-            <span class="release-date">October 25, 2023</span>
+            <span class="release-date">Oct 25, 2023</span>
             <span class="release-version">v1.0</span>
-            <span class="release-description">Slideshower for macOS released to the public</span>
+            <span class="release-description">Slideshower for macOS released to the public &#127881;</span>
           </div>
       </div>
     </div>
