--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -13,7 +13,7 @@
       <div class="col-lg-6 col-10">
         <form action="https://formspree.io/f/xpzgbjvq" method="POST">
           <div class="form-group">
-              <input type="email" id="email" name="email" placeholder="Your email" class="form-control">
+              <input type="email" id="email" name="email" placeholder="Your email (so I can reply to you - no spam, no newsletters...)" class="form-control">
               <textarea rows="7" name="message" placeholder="Something is not working? Feature is missing? Let me know." class="form-control mt-4"></textarea>
           </div>
           <div class="text-center mt-4">
