--- a/layouts/partials/sections/faq.html
+++ b/layouts/partials/sections/faq.html
@@ -1,7 +1,7 @@
 <section class="section faq py-5" id="faq">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-8">
+      <div class="col-10 col-xl-10">
         <h1 class="fs-1 fw-bold text-center text-primary pb-3">FAQ - Slideshower for macOS</h1>
         <div class="faq-container">
           <div class="faq-item">
@@ -18,7 +18,7 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How much does Slideshower cost?</h4>
-            <h5 class="faq-answer">SlideShower is free to use. You can support development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</h5>
+            <h5 class="faq-answer">SlideShower is free to use. You can support future development by <a href="https://www.buymeacoffee.com/slideshower">buying me a coffee</a> ☕</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How do I download Slideshower?</h4>
@@ -26,7 +26,11 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How to install Slideshower?</h4>
-            <h5 class="faq-answer">That's a bit tricky part. Download the file, open it once - accept the info window and then you need to open the .dmg file again. If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></h5>
+            <h5 class="faq-answer">That's a bit tricky part. Download the file, and then right-click on it. Select 'Open' from the menu and choose the option of opening the app anyway. If you have problems, contact me at <a href="mailto:hello@slideshower.com">hello@slideshower.com</a></h5>
+          </div>
+          <div class="faq-item">
+            <h4 class="faq-question">Which macOS versions are supported?</h4>
+            <h5 class="faq-answer">Slideshower runs on macOS Ventura (13.5) and up.</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">Can I request new features for Slideshower?</h4>
@@ -45,6 +49,11 @@
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
+          <div class="release-note">
+            <span class="release-date">Dec 1, 2023</span>
+            <span class="release-version">v1.3</span>
+            <span class="release-description">UI improved a bit and a bugfix arrived.</span>
+          </div>
           <div class="release-note">
             <span class="release-date">Nov 26, 2023</span>
             <span class="release-version">v1.2</span>
