--- a/layouts/partials/sections/cta.html
+++ b/layouts/partials/sections/cta.html
@@ -18,7 +18,8 @@
           <a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}<span class="ms-2"></span></a>
         {{ end }}
         {{ with .content.text }}
-          <p class="text-center text-black-61 pb-4 my-2">{{ . | markdownify }}</p>
+          <p class="text-center text-black-61 my-2">{{ . | markdownify }}</p>
+          <p class="text-center text-black-61 pb-4">macOS: min 13.5</p>
         {{ end }}
       </div>
     </div>
