--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
   {{ with .Site.Data.home.portfolio }}{{ partial "sections/portfolio.html" . }}{{ end }}
   {{ with .Site.Data.home.features }}{{ partial "sections/features.html" . }}{{ end }}
   {{ with .Site.Data.home.brands }}{{ partial "sections/faq.html" . }}{{ end }}
-  {{ with .Site.Data.home.cta }}{{ partial "sections/cta.html" . }}{{ end }}
+  {{ with .Site.Data.home.download_section }}{{ partial "sections/download_section.html" . }}{{ end }}
   {{ with .Site.Data.home.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}
 
 {{ end }}
