Improved html structure

--- a/layouts/partials/sections/2_overview.html
+++ b/layouts/partials/sections/2_overview.html
@@ -1,4 +1,4 @@
-<section class="section portfolio text-center" id="portfolio">
+<section class="section portfolio text-center" id="overview">
   <div class="container mx-auto max-w-sm">
     {{ range .content }}
     <div class="row portfolio-feature">
