--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-  {{ with .Site.Data.home.hero }}{{ partial "sections/hero.html" . }}{{ end }}
-  {{ with .Site.Data.home.overview }}{{ partial "sections/overview.html" . }}{{ end }}
-  {{ with .Site.Data.home.features }}{{ partial "sections/features.html" . }}{{ end }}
-  {{ with .Site.Data.home.brands }}{{ partial "sections/faq.html" . }}{{ end }}
-  {{ with .Site.Data.home.download_section }}{{ partial "sections/download_section.html" . }}{{ end }}
-  {{ with .Site.Data.home.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}
-
+  {{ with .Site.Data.home.hero }}{{ partial "sections/1_hero.html" . }}{{ end }}
+  {{ with .Site.Data.home.overview }}{{ partial "sections/2_overview.html" . }}{{ end }}
+  {{ with .Site.Data.home.features }}{{ partial "sections/3_features.html" . }}{{ end }}
+  {{ with .Site.Data.home.brands }}{{ partial "sections/4_faq.html" . }}{{ end }}
+  {{ with .Site.Data.home.releasenotes }}{{ partial "sections/5_releasenotes.html" . }}{{ end }}
+  {{ with .Site.Data.home.download }}{{ partial "sections/6_download.html" . }}{{ end }}
+  {{ with .Site.Data.home.contact_form }}{{ partial "sections/7_contact_form.html" . }}{{ end }}
 {{ end }}
