--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -4,6 +4,11 @@
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
           <div class="release-note">
+            <span class="release-date">Dec 7, 2023</span>
+            <span class="release-version">v1.5</span>
+            <span class="release-description">You can pause & resume a slideshow by pressing a spacebar.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Dec 5, 2023</span>
             <span class="release-version">v1.4</span>
             <span class="release-description">You can stop a slideshow from the main window. Even more UI improvements & bug fixes.</span>
