--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -3,6 +3,11 @@
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8">
         <h2 class="fs-1 fw-bold text-center text-primary pb-3">Release Notes </h2>
+        <div class="release-note">
+          <span class="release-date">Dec 11, 2023</span>
+          <span class="release-version">v1.6</span>
+          <span class="release-description">You can remove added photos. Import of big number of photos is much faster now.</span>
+        </div>
           <div class="release-note">
             <span class="release-date">Dec 7, 2023</span>
             <span class="release-version">v1.5</span>
